This document details changes for TinyMUSH 3 "mainline" releases, 
as well as bugfix updates issued against those mainline releases.

For changes between beta versions, consult the BETA document. 

=============================================================================
			TinyMUSH 3.1 Changes
=============================================================================

TinyMUSH 3.0 beta 1 was released on ?????.

-----------------------------------------------------------------------------

CHANGES TO THE BASE SERVER AND SERVER CONFIGURATION

- A new script, Update, automatically downloads and applies official patches
  to TinyMUSH 3.

- The Backup, Restore, and Archive scripts can now look at a backups
  directory (set in mush.config).

- The Startmush script handles KILLED and CRASH databases more elegantly.

- Dynamically loadable modules. There is now an interface for writing your
  own hardcode extensions to the server, and loading them at runtime.
  The comsys and mailer are now loadable modules; the USE_COMSYS and 
  USE_MAIL #ifdef's and the have_comsys and have_mailer conf directives
  are no longer needed.

- '@list memory' gives a breakdown of the memory used by various constructs.

- Many changes and improvements to caching.

  - Instead of starting the cache at some fixed width and depth, and
    growing the depth (but not the width) to whatever size is demanded by
    the game, which can cause "cache bloat" if a very large number of
    objects gets loaded into the cache as part of a single operation,
    the total size of the cache is fixed -- the amount of memory that
    the cached data takes cannot exceed a specified limit. This is
    configurable via the cache_size parameter.

  - Removal of elements from the cache is based on "least recently used"
    rather than "not frequently used".

  - Attribute caching is now used, with cache bypass in situations where
    this is not efficient.
